[package]
name = "bulletproofs_gadgets"
version = "0.1.0"
authors = ["CPerezz <carlos@dusk.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocaf = {git = "https://github.com/dusk-network/dusk-zerocaf", branch = "master"}
merlin = "2.0.0"
curve25519-dalek = "2.0.0"

[dependencies.bulletproofs]
git = "https://github.com/dusk-network/bulletproofs"
branch = "dalek-v2"
features = ["yoloproofs"]

[dev-dependencies]
rand = "0.7.3"